--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "framework",
-  "version": "0.0.1",
+  "name": "oakwood",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
